# OpenDerisk

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  pyproject.toml
.aci/metadata/: aci-metadata.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation-related.yml  feature-request.yml
.github/workflows/: python-publish.yml  release-drafter.yml
assets/schema/: derisk.sql
configs/: derisk-graphrag.toml  derisk-local-glm.toml  derisk-local-qwen.toml  derisk-local-vllm.toml  derisk-proxy-claude.toml  derisk-proxy-deepseek.toml  derisk-proxy-gemini.toml  derisk-proxy-openai.toml  derisk-proxy-tongyi.toml  derisk-siliconflow.toml
docs/: .gitignore  Dockerfile-deploy  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: overview.md  quickstart.md
docs/docs/installation/: sourcecode.md
pilot/meta_data/alembic/: env.py
web/: .eslintignore  .eslintrc.js  README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
web/client/api/: index.ts  request.ts
web/components/chat/: completion.tsx
web/components/chat/chat-content/: agent-messages.tsx  config.tsx  vis-tabs.tsx
web/components/database/: database-form.tsx
web/components/flow/: flow-card.tsx
web/components/knowledge/: doc-upload-form.tsx
web/components/layout/: side-bar.tsx
web/components/menuList/: index.tsx
web/hooks/: use-chat.ts
web/lib/: session.ts
web/locales/en/: common.ts
web/locales/zh/: chat.ts  common.ts
web/new-components/chat/: ChatContentContainer.tsx
web/new-components/layout/: UserBar.tsx
web/pages/: _app.tsx  _document.tsx  index.tsx
web/pages/chat/: index.tsx
web/pages/construct/: database.tsx
web/pages/construct/models/: index.tsx
web/pages/taskManagement/: index.tsx
web/utils/: constants.ts  index.ts
web/utils/constants/: cookie.ts  storage.ts
(+21 files in other folders)
